# credit-card-fraud-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
models/: RandomForest_smote_best_model.joblib  XGBoost_best_model.joblib  XGBoost_final_model.joblib  XGBoost_smote_best_model.joblib
notebooks/: eda.ipynb  model_evaluation.ipynb
reports/evaluation_tables/: rf-classification-report.csv  rf_smote-classification-report.csv  xgb-classification-report.csv  xgb_smote-classification-report.csv
src/: data_script.py  hyperparameter_tuning.py  imbalance_handling.py  model.py  runner.py
src/fraud_detection/: config.py  data_script.py  hyperparameter_tuning.py
