[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Machine learning pipeline for credit card fraud detection"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "pyyaml",
    "joblib",
    "imblearn",
    "zipfile",
    "pathlib",
    "kaggle",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
